sources += files('arch.cpp','assembler.cpp','builder.cpp','callconv.cpp','codeholder.cpp','compiler.cpp','constpool.cpp','cpuinfo.cpp','emitter.cpp','func.cpp','globals.cpp','inst.cpp','jitallocator.cpp','jitruntime.cpp','logging.cpp','operand.cpp','osutils.cpp','ralocal.cpp','rapass.cpp','rastack.cpp','string.cpp','support.cpp','target.cpp','type.cpp','virtmem.cpp','zone.cpp','zonehash.cpp','zonelist.cpp','zonestack.cpp','zonetree.cpp','zonevector.cpp')